manifests/openwebui/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
  labels:
    name: open-webui
